--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@zendeskgarden/react-buttons": "^3.6.7",
+    "@zendeskgarden/react-textfields": "^3.4.1",
+    "@zendeskgarden/react-theming": "^3.1.3",
+    "@zendeskgarden/react-typography": "^0.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
