--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@zendeskgarden/react-buttons": "^3.6.7",
+    "@zendeskgarden/react-notifications": "^3.1.15",
     "@zendeskgarden/react-textfields": "^3.4.1",
     "@zendeskgarden/react-theming": "^3.1.3",
     "@zendeskgarden/react-typography": "^0.2.0",
